--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -1,9 +1,10 @@
 [[outputs.influxdb_v2]]
   urls = ["http://127.0.0.1:8086"]
-  token = ""
-  organization = ""
-  bucket = "solaredge_cloud"
+  token = "$DOCKER_INFLUXDB_INIT_ADMIN_TOKEN"
+  organization = "$DOCKER_INFLUXDB_INIT_ORG"
+  bucket = "$DOCKER_INFLUXDB_INIT_BUCKET"
   namepass = ["power","energy","data","panel"]
+  insecure_skip_verify = true
 
 # ------------------------------------------------ Inputs --------------------------------------------
 
