Initial connection with solaredge cloud api
Change-Id: I4755007b69879d5706fbffb11147eb6a762392c7

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,14 +4,15 @@ services:
   grafana:
     environment:
       - GF_SECURITY_ADMIN_USER=admin
-      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_SECURITY_ADMIN_PASSWORD=password
       - GF_USERS_ALLOW_SIGN_UP=false
       - GF_PATHS_LOGS=/var/log/grafana/
       - GF_LOG_MODE=console file
       - GF_LOG_LEVEL=info
-      - GF_AUTH_ANONYMOUS_ENABLED=true
-      - GF_AUTH_ANONYMOUS_ORG_NAME=SolarEdge Monitoring
-      - GF_AUTH_ANONYMOUS_ORG_ROLE=Editor
+      # - GF_AUTH_DISABLE_LOGIN_FORM=true
+      # - GF_AUTH_ANONYMOUS_ENABLED=true
+      # - GF_AUTH_ANONYMOUS_ORG_NAME=SolarEdge Monitoring
+      # - GF_AUTH_ANONYMOUS_ORG_ROLE=Editor
       - GF_DASHBOARDS_DEFAULT_HOME_DASHBOARD_PATH=/etc/grafana/provisioning/dashboards/solaredge-cloud_rev1.json
       - GF_INSTALL_PLUGINS=fetzerch-sunandmoon-datasource
     ports:
