--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,12 +15,13 @@ services:
       - "8086:8086"
 
   telegraf:
-    image: telegraf:1.25-alpine
+    image: telegraf:latest
     container_name: solaredge-telegraf
     restart: unless-stopped
     volumes:
       # Mount for telegraf config
       - ./telegraf/telegraf.conf:/etc/telegraf/telegraf.conf:ro
+      - ./telegraf/telegraf-scrape-full-history.conf:/var/lib/telegraf/telegraf-scrape-full-history.conf:ro
       - ./telegraf/solarEdgeCloudScraper.py:/var/lib/telegraf/solarEdgeCloudScraper.py:ro
     build:
       context: .
