Use local time zone in grafana and telegraf, not possible in influxdb
Change-Id: I173ac6970033e31a282c379ed9231b726d2ad60f

--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -1,3 +1,6 @@
+[agent]
+log_with_timezone = 'local'
+
 [[outputs.influxdb_v2]]
   urls = ["http://influxdb:8086"]
   token = "$DOCKER_INFLUXDB_INIT_ADMIN_TOKEN"
