--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -15,6 +15,7 @@ services:
       # - GF_AUTH_ANONYMOUS_ORG_ROLE=Editor
       - GF_DASHBOARDS_DEFAULT_HOME_DASHBOARD_PATH=/etc/grafana/provisioning/dashboards/solaredge-cloud_rev1.json
       - GF_INSTALL_PLUGINS=fetzerch-sunandmoon-datasource
+      - TZ=Europe/Warsaw
     ports:
       - 3000:3000
   telegraf:
