Disable on default grafana login and allow anonymous users as viewers
Change-Id: I0fe3982d459e24d602f8d85bbc09c6957a94c52f

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
 
   proxy:
     image: proxy:latest
+    container_name: solaredge-proxy
     build:
       context: .
       dockerfile: proxy/Dockerfile
@@ -55,8 +56,8 @@ services:
     restart: unless-stopped
     volumes:
       - grafana_data:/var/lib/grafana
-      - ./grafana/datasources:/etc/grafana/provisioning/datasources/
-      - ./grafana/dashboards:/etc/grafana/provisioning/dashboards/
+      - ./grafana/datasources:/etc/grafana/provisioning/datasources:rw
+      - ./grafana/dashboards:/etc/grafana/provisioning/dashboards:rw
     networks:
       - common_network
     depends_on:
