Set update window from environment, autodiscovety of site and sn in grafana
Change-Id: Id66f1fac6c28ef4fef354acd6ffed31c03d04900

--- a/grafana/datasources/datasource.yml
+++ b/grafana/datasources/datasource.yml
@@ -26,7 +26,7 @@ datasources:
       token: myadmintoken
     editable: true
   - orgId: 1
-    name: Sun and Moon
+    name: sun_and_moon
     type: fetzerch-sunandmoon-datasource
     access:       proxy
     jsonData:
