--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -25,6 +25,8 @@ services:
       - DOCKER_INFLUXDB_INIT_ORG=myorg
       - DOCKER_INFLUXDB_INIT_BUCKET=solaredge_cloud
       - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=myadmintoken
+      - UPDATE_WINDOW_START=05:00:00
+      - UPDATE_WINDOW_END=19:00:00
   influxdb:
     environment:
       - DOCKER_INFLUXDB_INIT_MODE=setup
