Set daiy update inverval from environment
Change-Id: I95d4fc1348cf661e4e53f5202d6d55246d01c59d

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -27,6 +27,7 @@ services:
       - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=myadmintoken
       - UPDATE_WINDOW_START=05:00:00
       - UPDATE_WINDOW_END=19:00:00
+      - UPDATE_INTERVAL=60
   influxdb:
     environment:
       - DOCKER_INFLUXDB_INIT_MODE=setup
