Move proxy env to overrides, add alt names to variables
Change-Id: I89c9c42516954ec4d9e6bd041a7c79e3dd7caa54

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,6 +1,13 @@
 version: '3.9'
 
 services:
+  proxy:
+    environment:
+      - DOMAIN=localhost
+      - ALT_NAMES=localhost
+      - TARGET_PORT=3000
+      - TARGET_HOST=grafana
+      - SSL_PORT=443
   grafana:
     environment:
       - GF_PATHS_LOGS=/var/log/grafana/
