Add placeholder dir for proxy ssl certificate
Change-Id: I182e336c2eb601e7ee5e6476f9164d5ce2745fbc

--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -8,3 +8,5 @@ RUN apk add --no-cache tzdata
 
 ADD proxy/nginx.conf.template /
 ADD proxy/configure_and_start.sh /
+
+ADD proxy/cert/* /etc/nginx/certs/
