Add initial grafana dasboard and datasource for modbus
Change-Id: I7e92d9a71ac18cbe21d8499736eface59a90b805

--- a/grafana/datasources/datasource.yml
+++ b/grafana/datasources/datasource.yml
@@ -16,9 +16,25 @@ datasources:
     access: proxy
     url: http://influxdb:8086
     basicAuth: true
-    isDefault: true
+    isDefault: false
     jsonData:
       defaultBucket: solaredge_cloud
+      httpMode: POST
+      organization: myorg
+      version: Flux
+    secureJsonData:
+      token: myadmintoken
+    editable: true
+  - orgId: 1
+    version: 2
+    name: solaredge
+    type: influxdb
+    access: proxy
+    url: http://influxdb:8086
+    basicAuth: true
+    isDefault: true
+    jsonData:
+      defaultBucket: solaredge
       httpMode: POST
       organization: myorg
       version: Flux
