--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,9 +89,9 @@ services:
       - GF_LOG_MODE=console file
       - GF_LOG_LEVEL=info
       # To get admin/editor access toggle comment on following 3 lines (GF_SECURITY_ADMIN_USER, GF_SECURITY_ADMIN_PASSWORD, GF_AUTH_DISABLE_LOGIN_FORM)
-      - GF_SECURITY_ADMIN_USER=${GRAFANA_ADMIN_USER}
-      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD}
-      # - GF_AUTH_DISABLE_LOGIN_FORM=true
+      # - GF_SECURITY_ADMIN_USER=${GRAFANA_ADMIN_USER}
+      # - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD}
+      - GF_AUTH_DISABLE_LOGIN_FORM=true
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Viewer
       - GF_DASHBOARDS_DEFAULT_HOME_DASHBOARD_PATH=/etc/grafana/provisioning/dashboards/solaredge-cloud_rev1.json
